# cmdcalc

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompileOptions.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: cmdcalc.cpp
src/cmdlib/: CMakeLists.txt
src/cmdlib/cmdlib/: CMakeLists.txt
src/cmdlib/cmdlib/cmdlib/: calculator.cpp  calculator.hpp  parser.cpp  parser.hpp  stack.cpp  stack.hpp
src/cmdlib/cmdlib/ftslib/: calculator.cpp  calculator.hpp  libmain.hpp  parser.cpp  parser.hpp  stack.cpp  stack.hpp
src/cmdlib/tests/: CMakeLists.txt  test_cmdcalc.cpp
